--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Thee Developer's Blog</title>
+    <title>Tech Forum</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
 
@@ -11,7 +11,7 @@
     <div class="wrapper">
       <header>
         <h1>
-          <a href="/">Thee Developer's Blog</a>
+          <a href="/">Model</a>
         </h1>
         {{#if loggedIn}}
         <nav>
