--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,22 +1,22 @@
 <article>
-  <a href="/dashboard"> &larr; Back to dashboard</a>
+  <a href="/dashboard"> &larr; Return to dashboard</a>
   <h2>
-    Edit Post
+    Edit Post Title
   </h2>
   <form class="edit-post-form">
     <div>
       <input name="post-title" type="text" value="{{post.title}}" />
+      <span>({{ post.post_text}})</span>
     </div>
     <div>
-      {{post.created_at}}
+by you on {{format_date post.created_at}}
       |
-      <a href="/post/{{post.id}}">{{post.comments.length}} {{"comment" post.comments.length}}</a>
+      <a href="/post/{{post.id}}">{{post.comments.length}} {{format_plural "comment" post.comments.length}}</a>
     </div>
     <button type="submit">Save post</button>
     <button type="button" class="delete-post-btn">Delete post</button>
   </form>
 </article>
-
 
 <form class="comment-form">
   <div>
