--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,11 +1,12 @@
 <article class="post">
+
   <div class="title">
-    <a href="{{post_url}}" target="_blank">{{title}}</a>
-    <span>({{post_url}})</span>
+    <a href="/post/{{id}}">{{title}}</a>
+
+    Created by: {{developer.username}} on {{format_date created_at}}
   </div>
   <div class="meta">
-    {{format_plural "point" vote_count}} by {{developer.username}} on {{created_at}}
-    |
-    <a href="/post/{{id}}">{{comments.length}}</a>
+    <span>{{post_text}}</span>
+    <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
   </div>
 </article>
