--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
     <div class="wrapper">
       <header>
         <h1>
-          <a href="/">Model</a>
+          <a href="/">Tech Forum</a>
         </h1>
         {{#if loggedIn}}
         <nav>
